--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.9",
+    "@rainbow-me/rainbowkit": "^2.2.9",
+    "@tanstack/react-query": "^5.90.10",
+    "dotenv": "^17.2.3",
+    "ethers": "^6.15.0",
+    "graphql": "^16.12.0",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "pinata-web3": "^0.5.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "wagmi": "^2.19.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
