--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ethers": "^6.15.0",
     "graphql": "^16.12.0",
     "lucide-react": "^0.554.0",
-    "next": "latest",
+    "next": "14.2.20",
     "pinata-web3": "^0.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
