--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.554.0",
     "next": "15.5.6",
     "pinata-web3": "^0.5.4",
+    "pino-pretty": "^13.1.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "wagmi": "^2.19.4"
