--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pino-pretty": "^13.1.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sonner": "^2.0.7",
     "wagmi": "^2.19.4"
   },
   "devDependencies": {
